refactoring openapi+backend
