# apps/backend/src/types/openapi.ts
@@ -82,23 +82,23 @@ export interface components {
         Error401: {
             message: string;
         };
-        FolderDataItemMeta: {
-            createdAt: number;
-            updatedAt: number;
-        };
         FolderDataItemBase: {
             name: string;
-            _meta: components["schemas"]["FolderDataItemMeta"];
+            _meta: {
+                createdAt: number;
+                updatedAt: number;
+            };
         };
         /** @enum {string} */
         ItemType: "FOLDER" | "FILE";
-        FolderDataItemFileBase: components["schemas"]["FolderDataItemBase"] & {
+        StoredFileBase: components["schemas"]["FolderDataItemBase"] & {
             itemType: components["schemas"]["ItemType"] & "FILE";
             src: string;
+            extension: string | null;
         };
         /** @enum {string} */
         FileType: "IMAGE" | "VIDEO" | "AUDIO" | "UNKNOWN";
-        FolderDataItemAudio: components["schemas"]["FolderDataItemFileBase"] & {
+        StoredFileAudio: components["schemas"]["StoredFileBase"] & {
             fileType: components["schemas"]["FileType"] & "AUDIO";
             metadata: {
                 album: string | null;
@@ -106,25 +106,27 @@ export interface components {
                 year: number | null;
                 artists: string[];
                 bitrate: number | null;
-                duration: number | null;
+                duration: number;
             };
         };
-        FolderDataSize: {
-            width: number;
-            height: number;
-        };
-        FolderDataItemImage: components["schemas"]["FolderDataItemFileBase"] & {
+        StoredFileImage: components["schemas"]["StoredFileBase"] & {
             fileType: components["schemas"]["FileType"] & "IMAGE";
-            metadata: components["schemas"]["FolderDataSize"];
+            metadata: {
+                width: number;
+                height: number;
+            };
         };
-        FolderDataItemVideo: components["schemas"]["FolderDataItemFileBase"] & {
+        StoredFileVideo: components["schemas"]["StoredFileBase"] & {
             fileType: components["schemas"]["FileType"] & "VIDEO";
-            metadata: components["schemas"]["FolderDataSize"];
+            metadata: {
+                width: number;
+                height: number;
+            };
         };
-        FolderDataItemUnknown: components["schemas"]["FolderDataItemFileBase"] & {
+        StoredFileUnknown: components["schemas"]["StoredFileBase"] & {
             fileType: components["schemas"]["FileType"] & "UNKNOWN";
         };
-        FolderDataItemFile: components["schemas"]["FolderDataItemAudio"] | components["schemas"]["FolderDataItemImage"] | components["schemas"]["FolderDataItemVideo"] | components["schemas"]["FolderDataItemUnknown"];
+        StoredFile: components["schemas"]["StoredFileAudio"] | components["schemas"]["StoredFileImage"] | components["schemas"]["StoredFileVideo"] | components["schemas"]["StoredFileUnknown"];
         PostResponse: {
             _meta: {
                 id: string;
@@ -132,7 +134,7 @@ export interface components {
                 updatedAt: number;
             };
             text: string;
-            attachments: components["schemas"]["FolderDataItemFile"][];
+            attachments: components["schemas"]["StoredFile"][];
         };
         PostsResponse: {
             _meta: {
@@ -153,7 +155,7 @@ export interface components {
         };
         PostUpdateRequest: {
             text: string;
-            attachments: (components["schemas"]["FolderDataItemFile"] | null)[];
+            attachments: (components["schemas"]["StoredFile"] | null)[];
             files: string[];
         };
         FolderDataItemFolder: components["schemas"]["FolderDataItemBase"] & {
@@ -163,10 +165,10 @@ export interface components {
             folders: (components["schemas"]["FolderDataItemFolder"] & {
                 path: string;
             })[];
-            files: (components["schemas"]["FolderDataItemFile"] & {
+            files: (components["schemas"]["StoredFile"] & {
                 path: string;
             })[];
-            file: (components["schemas"]["FolderDataItemFile"] & {
+            file: (components["schemas"]["StoredFile"] & {
                 path: string;
             }) | null;
             pathDirectory: string;
@@ -465,10 +467,10 @@ type ReadonlyArray<T> = [
     unknown[]
 ] ? Readonly<Exclude<T, undefined>> : Readonly<Exclude<T, undefined>[]>;
 export const itemTypeValues: ReadonlyArray<FlattenedDeepRequired<components>["schemas"]["ItemType"]> = ["FOLDER", "FILE"];
-export const folderDataItemFileBaseItemTypeValues: ReadonlyArray<FlattenedDeepRequired<components>["schemas"]["FolderDataItemFileBase"]["itemType"]> = ["FILE"];
+export const storedFileBaseItemTypeValues: ReadonlyArray<FlattenedDeepRequired<components>["schemas"]["StoredFileBase"]["itemType"]> = ["FILE"];
 export const fileTypeValues: ReadonlyArray<FlattenedDeepRequired<components>["schemas"]["FileType"]> = ["IMAGE", "VIDEO", "AUDIO", "UNKNOWN"];
-export const folderDataItemAudioFileTypeValues: ReadonlyArray<FlattenedDeepRequired<components>["schemas"]["FolderDataItemAudio"]["fileType"]> = ["AUDIO"];
-export const folderDataItemImageFileTypeValues: ReadonlyArray<FlattenedDeepRequired<components>["schemas"]["FolderDataItemImage"]["fileType"]> = ["IMAGE"];
-export const folderDataItemVideoFileTypeValues: ReadonlyArray<FlattenedDeepRequired<components>["schemas"]["FolderDataItemVideo"]["fileType"]> = ["VIDEO"];
-export const folderDataItemUnknownFileTypeValues: ReadonlyArray<FlattenedDeepRequired<components>["schemas"]["FolderDataItemUnknown"]["fileType"]> = ["UNKNOWN"];
+export const storedFileAudioFileTypeValues: ReadonlyArray<FlattenedDeepRequired<components>["schemas"]["StoredFileAudio"]["fileType"]> = ["AUDIO"];
+export const storedFileImageFileTypeValues: ReadonlyArray<FlattenedDeepRequired<components>["schemas"]["StoredFileImage"]["fileType"]> = ["IMAGE"];
+export const storedFileVideoFileTypeValues: ReadonlyArray<FlattenedDeepRequired<components>["schemas"]["StoredFileVideo"]["fileType"]> = ["VIDEO"];
+export const storedFileUnknownFileTypeValues: ReadonlyArray<FlattenedDeepRequired<components>["schemas"]["StoredFileUnknown"]["fileType"]> = ["UNKNOWN"];
 export const folderDataItemFolderItemTypeValues: ReadonlyArray<FlattenedDeepRequired<components>["schemas"]["FolderDataItemFolder"]["itemType"]> = ["FOLDER"];
