# apps/openApi/dist/openapi.yaml
@@ -275,23 +275,21 @@ components:
           type: string
       required:
         - message
-    FolderDataItemMeta:
-      type: object
-      properties:
-        createdAt:
-          type: number
-        updatedAt:
-          type: number
-      required:
-        - createdAt
-        - updatedAt
     FolderDataItemBase:
       type: object
       properties:
         name:
           type: string
         _meta:
-          $ref: '#/components/schemas/FolderDataItemMeta'
+          type: object
+          properties:
+            createdAt:
+              type: number
+            updatedAt:
+              type: number
+          required:
+            - createdAt
+            - updatedAt
       required:
         - name
         - _meta
@@ -300,7 +298,7 @@ components:
       enum:
         - FOLDER
         - FILE
-    FolderDataItemFileBase:
+    StoredFileBase:
       allOf:
         - $ref: '#/components/schemas/FolderDataItemBase'
         - type: object
@@ -312,9 +310,14 @@ components:
                     - FILE
             src:
               type: string
+            extension:
+              type:
+                - string
+                - 'null'
           required:
             - itemType
             - src
+            - extension
     FileType:
       type: string
       enum:
@@ -322,9 +325,9 @@ components:
         - VIDEO
         - AUDIO
         - UNKNOWN
-    FolderDataItemAudio:
+    StoredFileAudio:
       allOf:
-        - $ref: '#/components/schemas/FolderDataItemFileBase'
+        - $ref: '#/components/schemas/StoredFileBase'
         - type: object
           properties:
             fileType:
@@ -353,7 +356,6 @@ components:
                   nullable: true
                 duration:
                   type: number
-                  nullable: true
               required:
                 - bitrate
                 - duration
@@ -364,19 +366,9 @@ components:
           required:
             - metadata
             - fileType
-    FolderDataSize:
-      type: object
-      properties:
-        width:
-          type: number
-        height:
-          type: number
-      required:
-        - width
-        - height
-    FolderDataItemImage:
+    StoredFileImage:
       allOf:
-        - $ref: '#/components/schemas/FolderDataItemFileBase'
+        - $ref: '#/components/schemas/StoredFileBase'
         - type: object
           properties:
             fileType:
@@ -385,13 +377,21 @@ components:
                 - enum:
                     - IMAGE
             metadata:
-              $ref: '#/components/schemas/FolderDataSize'
+              type: object
+              properties:
+                width:
+                  type: number
+                height:
+                  type: number
+              required:
+                - width
+                - height
           required:
             - metadata
             - fileType
-    FolderDataItemVideo:
+    StoredFileVideo:
       allOf:
-        - $ref: '#/components/schemas/FolderDataItemFileBase'
+        - $ref: '#/components/schemas/StoredFileBase'
         - type: object
           properties:
             fileType:
@@ -400,13 +400,21 @@ components:
                 - enum:
                     - VIDEO
             metadata:
-              $ref: '#/components/schemas/FolderDataSize'
+              type: object
+              properties:
+                width:
+                  type: number
+                height:
+                  type: number
+              required:
+                - width
+                - height
           required:
             - metadata
             - fileType
-    FolderDataItemUnknown:
+    StoredFileUnknown:
       allOf:
-        - $ref: '#/components/schemas/FolderDataItemFileBase'
+        - $ref: '#/components/schemas/StoredFileBase'
         - type: object
           properties:
             fileType:
@@ -416,12 +424,12 @@ components:
                     - UNKNOWN
           required:
             - fileType
-    FolderDataItemFile:
+    StoredFile:
       oneOf:
-        - $ref: '#/components/schemas/FolderDataItemAudio'
-        - $ref: '#/components/schemas/FolderDataItemImage'
-        - $ref: '#/components/schemas/FolderDataItemVideo'
-        - $ref: '#/components/schemas/FolderDataItemUnknown'
+        - $ref: '#/components/schemas/StoredFileAudio'
+        - $ref: '#/components/schemas/StoredFileImage'
+        - $ref: '#/components/schemas/StoredFileVideo'
+        - $ref: '#/components/schemas/StoredFileUnknown'
     PostResponse:
       type: object
       properties:
@@ -443,7 +451,7 @@ components:
         attachments:
           type: array
           items:
-            $ref: '#/components/schemas/FolderDataItemFile'
+            $ref: '#/components/schemas/StoredFile'
       required:
         - _meta
         - text
@@ -506,7 +514,7 @@ components:
           type: array
           items:
             oneOf:
-              - $ref: '#/components/schemas/FolderDataItemFile'
+              - $ref: '#/components/schemas/StoredFile'
               - type: 'null'
         files:
           type: array
@@ -547,7 +555,7 @@ components:
           type: array
           items:
             allOf:
-              - $ref: '#/components/schemas/FolderDataItemFile'
+              - $ref: '#/components/schemas/StoredFile'
               - type: object
                 properties:
                   path:
@@ -557,7 +565,7 @@ components:
         file:
           oneOf:
             - allOf:
-                - $ref: '#/components/schemas/FolderDataItemFile'
+                - $ref: '#/components/schemas/StoredFile'
                 - type: object
                   properties:
                     path:
